--- a/assets/styles.css
+++ b/assets/styles.css
@@ -228,9 +228,15 @@ section.cover .cover-main>p:last-child a:last-child:hover {
   content: '\270D';
   position: absolute;
   top: 0;
+  right: 0;
+  width: 30%;
+  height: 100%;
+  display:flex;
+  flex-direction:row;
+  align-items: center;
   left: -1.25em;
   opacity: 0;
-  font-size: 0.875em;
+  font-size: 1rem;
 }
 
 .anchor:hover::before {
@@ -385,6 +391,22 @@ section.cover .cover-main {
   .close .sidebar-toggle:hover span:nth-child(1) { transform: rotate(45deg); width: 1.75rem; }
   .close .sidebar-toggle:hover span:nth-child(2) { opacity: 0; }
   .close .sidebar-toggle:hover span:nth-child(3) { transform: rotate(-45deg); width: 1.75rem; }
+
+.anchor::before {
+  content: '\270D';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30%;
+  height: 100%;
+  display:flex;
+  flex-direction:row;
+  align-items: center;
+  left:-1.2em;
+  opacity: 0;
+  font-size: 0.7rem;
+}
+
 }
 
 @media screen and (min-width: 769px) {
