--- a/assets/styles.css
+++ b/assets/styles.css
@@ -273,7 +273,12 @@ section.cover .cover-main {
 }
 
 .markdown-section hr {
-  border-bottom: 5px solid transparent;
+  height: 4px;
+    padding: 0;
+    margin: 1.7em 0;
+    overflow: hidden;
+    background-color: #e7e7e7;
+    border: none;
 }
 
 .token.punctuation {
